Wed Mar  5 14:40:20 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/xsc_base.mpb:
        * config/xsc_cxx.mpb:
        * config/xsc_idl.mpb:
        * config/xscrt.mpb:
        * config/xscrt_utils.mpb:
        
          Base projects for using XSC.

Mon Mar  3 14:19:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/log4cplus.mpb:
          Added base project for log4cplus

Sat Feb 29 11:51:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/Creator.pm:
          Strip out ^ from filenames on OpenVMS.

Fri Feb 28 13:36:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WorkspaceCreator.pm:
          Strip out ^ from directory names on OpenVMS. Fixes bugzilla
          3237.

Wed Feb 27 14:09:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/Driver.pm:
          On OpenVMS all filenames are returned lower case. The dynamic loading
          of creators then fails. Addressed this by opening the creator file
          and read the first line, it normally starts with package and after
          that the package name. Thanks to Chad Elliot for this idea and
          reviewing the proposed change.

Fri Feb 22 14:49:25 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * modules/TemplateParser.pm:

          Added a new template function, <%full_path()%>, which will expand
          environment variables and resolve relative paths to absolute paths.
          Template authors should only use this when the target build system
          requires it, since it limits the MPC user's flexibility in deciding
          when and how env vars are expanded, and removes "portability" of
          generated project files (by which I mean the ability to move them
          around in a filesystem, or even move them to different machines).

        * templates/wb26.mpd:
        * templates/wb26wrproject.mpd:
