@@ -27,7 +27,6 @@ use vars qw(@ISA);
 
 my($wsext)  = 'mwc';
 my($wsbase) = 'mwb';
-my($onVMS) = ($^O eq 'VMS');
 
 ## Valid names for assignments within a workspace
 my(%validNames) = ('cmdline'  => 1,
@@ -777,7 +776,7 @@ sub search_for_files {
       $self->search_for_files(\@f, $array, $impl);
       if ($impl) {
         $file =~ s/^\.\///;
-        if ($onVMS) {
+        if ($self->onVMS ()) {
           # Strip out ^ symbols
           $file =~ s/\^//g;
         }
@@ -787,7 +786,7 @@ sub search_for_files {
     else {
       if ($file =~ /\.mpc$/) {
         $file =~ s/^\.\///;
-        if ($onVMS) {
+        if ($self->onVMS ()) {
           # Strip out ^ symbols
           $file =~ s/\^//g;
         }
